[project]
name = "minifi-test-framework"
version = "0.1.0"
requires-python = ">= 3.10"
description = "A testing framework for MiNiFi extensions."
dependencies = [
    "behavex==4.6.0",
    "docker==7.1.0",
    "PyYAML==6.0.3",
    "humanfriendly==10.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["minifi_test_framework"]
